--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,12 @@
-version: "3.1"
-
 services:  
   db:
     image: postgis/postgis:12-master
-    container_name: moc_db
+    container_name: moi_db
     environment:
        POSTGRES_HOST_AUTH_METHOD: trust
        POSTGRES_PASSWORD: postgres
        POSTGRES_USER: postgres
-       POSTGRES_DB: moc
+       POSTGRES_DB: moi
 
   adminer:
     command: php -S 0.0.0.0:8080 -t /var/www/html
@@ -17,12 +15,7 @@ services:
       - db
     ports:
       - 8080:8080
-    container_name: moc_adminer
-  redis:
-    image: redis:6.0.5
-    ports:
-      - 6379:6379
-    container_name: moc_redis
+    container_name: moi_adminer
   web:
     build: .
     command: python3 manage.py runserver 0.0.0.0:8000
@@ -32,4 +25,4 @@ services:
       - 8000:8000
     depends_on:
       - db
-    container_name: moc_web
+    container_name: moi_web
