--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:  
   db:
-    image: postgis/postgis:12-master
+    image: postgis/postgis:17-3.5
     container_name: moi_db
     environment:
        POSTGRES_HOST_AUTH_METHOD: trust
